Fix flickering images, remove icon highlight for now

--- a/app/assets/stylesheets/views/article.scss
+++ b/app/assets/stylesheets/views/article.scss
@@ -387,6 +387,10 @@
   &.open .reaction-drawer {
     display: block;
   }
+
+  .hidden {
+    display: none;
+  }
 }
 
 .reaction-drawer {
